# ai-guardrails

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/actions/bootstrap/: action.yml
.github/workflows/: ci.yml  release.yml  update.yml
.task/checksum/: init-pre-commit  init-uv
examples/: .claude-settings.json  .pre-commit-config.yaml  README.md
gradle-plugin/: build.gradle.kts  settings.gradle.kts
gradle-plugin/src/main/kotlin/io/zenable/gradle/: ZenableExtension.kt  ZenableInitPlugin.kt  ZenablePlugin.kt
gradle-plugin/src/main/kotlin/io/zenable/gradle/tasks/: ZenableAnalyzeTask.kt  ZenableVerifyTask.kt
plugins/z/.claude-plugin/: plugin.json
plugins/z/commands/: feat.md  rebase.md  researchbranch.md
plugins/z/skills/guardrails-reviewer/: SKILL.md
plugins/z/skills/setup/: SKILL.md
plugins/z/skills/triage/scripts/: install-zenable.sh
plugins/zenable-core/.claude-plugin/: plugin.json
plugins/zenable-core/commands/: check.md  validate.md
plugins/zenable-core/hooks/: hooks.json
plugins/zenable-core/scripts/: validate-structure.sh
plugins/zenable-guardrails/: .mcp.json
plugins/zenable-guardrails/.claude-plugin/: plugin.json
plugins/zenable-guardrails/agents/: guardrails-reviewer.md
plugins/zenable-guardrails/commands/: addtests.md  check.md  debug.md  doublecheck.md  prfeedback.md  requirements.md
plugins/zenable-guardrails/hooks/: hooks.json
plugins/zenable-guardrails/scripts/: bootstrap.sh  install-zenable.sh
plugins/zenable-guardrails/skills/guardrails-reviewer/: SKILL.md
plugins/zenable-guardrails/skills/triage/: SKILL.md
plugins/zenable-guardrails/skills/triage/scripts/: install-zenable.sh
plugins/zenable-opencode-guardrails/: README.md  opencode.json  package.json
plugins/zenable-opencode-guardrails/src/: index.ts
scripts/: dump-unresolved-comments.sh  mark-addressed.sh  pin-precommit-rev.sh  update_versions.py
templates/: check.yml
tests/zenable-guardrails/: validate-structure.sh
tests/zenable_guardrails/: __init__.py  validate_structure.py
