[project]
name = "ai-guardrails"
version = "0.1.0"
description = "AI coding guardrails for Claude Code"
authors = [
    { name = "Zenable", email = "support@zenable.io" }
]
keywords = ["zenable", "guardrails", "policy-as-code", "conformance", "mcp", "governance", "quality", "security", "specifications", "spec-driven development", "context engineering"]
dependencies = []
readme = "README.md"
requires-python = ">= 3.13"

[project.urls]
Homepage = "https://zenable.io"
Documentation = "https://docs.zenable.io"
Repository = "https://github.com/Zenable-io/ai-guardrails"

[tool.uv]
managed = true

[tool.uv.pip]
universal = true
generate-hashes = true
require-hashes = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
