[project]
name = "ai-guardrails"
version = "1.0.0"
description = "AI coding guardrails for Claude Code"
authors = [
    { name = "Zenable", email = "support@zenable.io" }
]
keywords = ["zenable", "guardrails", "policy-as-code", "conformance", "mcp", "governance", "quality", "security", "specifications", "spec-driven development", "context engineering"]
dependencies = []
readme = "README.md"
requires-python = ">= 3.13"

[project.urls]
Homepage = "https://zenable.io"
Documentation = "https://docs.zenable.io"
Repository = "https://github.com/Zenable-io/ai-guardrails"

[tool.uv]
managed = true

[tool.uv.pip]
universal = true
generate-hashes = true
require-hashes = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = []
branch = "main"
build_command = "python3 scripts/update_versions.py {version}"
commit_message = "chore(release): {version}"
commit_parser = "angular"
tag_format = "v{version}"
major_on_zero = true
allow_zero_version = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
dist_glob_patterns = []
upload_to_vcs_release = false
