[project]
name = "ai-guardrails"
version = "1.0.0"
description = "AI coding guardrails for Claude Code"
authors = [
    { name = "Zenable", email = "support@zenable.io" }
]
keywords = ["zenable", "guardrails", "policy-as-code", "conformance", "mcp", "governance", "quality", "security", "specifications", "spec-driven development", "context engineering"]
dependencies = []
readme = "README.md"
requires-python = ">= 3.13"

[project.urls]
Homepage = "https://zenable.io"
Documentation = "https://docs.zenable.io"
Repository = "https://github.com/Zenable-io/ai-guardrails"

[tool.uv]
managed = true

[tool.uv.pip]
universal = true
generate-hashes = true
require-hashes = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# Tag-only releases: main is protected and we never push commits to it, so
# semantic-release only tags a commit that's already on main and cuts a GitHub
# release. The current version is derived from git tags (tag_format), not from
# any in-repo file — so there is nothing to write (version_toml/version_variables
# empty) and nothing to build/commit. The tag + GitHub release are the source of
# truth for the version; in-repo version fields stay static.
[tool.semantic_release]
version_toml = []
version_variables = []
branch = "main"
commit_parser = "angular"
tag_format = "v{version}"
major_on_zero = true
allow_zero_version = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
dist_glob_patterns = []
upload_to_vcs_release = false
